<resources>
    <string name="app_name">News App</string>
    <string name="deskripsi">deskripsi</string>
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="inpassword">Masukkan Password anda</string>
    <string name="inusername">Masukkan username anda</string>
    <string name="tittleawal">Lets Get you in!</string>
    <string name="login">Login</string>
    <string name="news">Berita Terkini</string>
    <string name="search">Search</string>
    <string name="newsdes">Menyediakan berita terlengkap</string>
    <string name="portal">Portal Universitas</string>
    <string name="edit">Ubah</string>
    <string name="hapus">Hapus</string>
    <string name="judul">Judul</string>
    <string name="cover">Cover</string>
    <string name="time">waktu publish</string>
    <string name="tambah">Tambahkan berita baru</string>
</resources>