<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_4sdp">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="@dimen/_9sdp"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:scaleType="center"
                    android:id="@+id/img_cover"
                    android:contentDescription="@string/deskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/ic_launcher"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/_9sdp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news"
                android:textSize="@dimen/_8ssp"
                android:fontFamily="@font/montserrat"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newsdes"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:src="@mipmap/ic_launcher"/>
                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/tv_username"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deskripsi"
                    android:textSize="@dimen/_8ssp"
                    android:fontFamily="@font/montserrat"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/tv_date"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deskripsi"
                    android:textSize="@dimen/_8ssp"
                    android:fontFamily="@font/montserrat"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>