<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddActivity"
    android:orientation="vertical"
    android:padding="@dimen/_12sdp">

    <TextView
        android:fontFamily="@font/montserrat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/judul"
        android:textColor="@color/black"/>
    <LinearLayout
        android:layout_marginHorizontal="@dimen/_1sdp"
        android:elevation="@dimen/_2sdp"
        android:padding="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_input">
        <ImageView
            android:contentDescription="@string/deskripsi"
            android:layout_marginHorizontal="@dimen/_2sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_person_outline_24"/>
        <View
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:layout_width="@dimen/_2sdp"
            android:layout_height="match_parent"
            android:background="@color/abu"/>
        <EditText
            android:id="@+id/edt_judul"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:background="@null"
            android:inputType="text|textNoSuggestions"
            android:textSize="@dimen/_11ssp"
            android:fontFamily="@font/montserrat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>
    </LinearLayout>
    <TextView
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/montserrat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deskripsi"
        android:textColor="@color/black"/>
    <LinearLayout
        android:layout_marginHorizontal="@dimen/_1sdp"
        android:elevation="@dimen/_2sdp"
        android:padding="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_input">
        <ImageView
            android:contentDescription="@string/deskripsi"
            android:layout_marginHorizontal="@dimen/_2sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_person_outline_24"/>
        <View
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:layout_width="@dimen/_2sdp"
            android:layout_height="match_parent"
            android:background="@color/abu"/>
        <EditText
            android:id="@+id/edt_deskripsi"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:background="@null"
            android:inputType="textMultiLine"
            android:textSize="@dimen/_11ssp"
            android:fontFamily="@font/montserrat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="1"
            android:maxLines="12"
            android:scrollbars="vertical"
            android:text=""/>
    </LinearLayout>
    <TextView
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/montserrat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="@color/black"/>
    <LinearLayout
        android:layout_marginHorizontal="@dimen/_1sdp"
        android:elevation="@dimen/_2sdp"
        android:padding="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_input">
        <ImageView
            android:contentDescription="@string/deskripsi"
            android:layout_marginHorizontal="@dimen/_2sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_person_outline_24"/>
        <View
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:layout_width="@dimen/_2sdp"
            android:layout_height="match_parent"
            android:background="@color/abu"/>
        <EditText
            android:focusable="false"
            android:id="@+id/edt_time"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:background="@null"
            android:inputType="text|textNoSuggestions"
            android:textSize="@dimen/_11ssp"
            android:fontFamily="@font/montserrat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>
    </LinearLayout>
    <TextView
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/montserrat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cover"
        android:textColor="@color/black"/>
    <androidx.cardview.widget.CardView
        android:layout_marginTop="@dimen/_4sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/img_cover"
                android:scaleType="centerCrop"
                android:contentDescription="@string/deskripsi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_launcher_background"/>
            <ImageButton
                android:id="@+id/img_delete"
                android:src="@drawable/baseline_close_24"
                android:layout_margin="@dimen/_7sdp"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/circle_trans"
                app:tint="@color/black"
                android:contentDescription="@string/deskripsi" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/btn_add"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:fontFamily="@font/montserrat"
        android:text="@string/tambah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_button_login"
        android:layout_marginTop="@dimen/_50sdp"/>

</LinearLayout>